--- a/package.json
+++ b/package.json
@@ -15,8 +15,19 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "algoliasearch": "^4.8.6",
+    "debounce": "^1.2.1",
     "gatsby": "^3.2.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "postcss-import": "^14.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-instantsearch-dom": "^6.10.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "gatsby-plugin-postcss": "^4.2.0",
+    "postcss": "^8.2.10",
+    "tailwindcss": "^2.1.1"
   }
 }
