--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "export": "NODE_ENV=production webpack --config export/webpack.config.js"
   },
   "dependencies": {
     "algoliasearch": "^4.8.6",
@@ -27,7 +28,9 @@
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "gatsby-plugin-postcss": "^4.2.0",
+    "mini-css-extract-plugin": "^1.5.0",
     "postcss": "^8.2.10",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.1.1",
+    "webpack-cli": "^4.6.0"
   }
 }
