ADAPT-2372: Updated build script, so that export is also ran.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
-    "build": "gatsby build",
+    "build": "gatsby build && npm run export",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "export": "NODE_ENV=production webpack --config export/webpack.config.js"
